<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menuUserFavoriteUser"
        android:icon="@drawable/ic_star"
        android:title="@string/favioruser"
        android:fontFamily="@font/agaramondpro_regular"
        app:showAsAction="always" />


    <item
        android:id="@+id/menuUserUnmatchUser"
        android:icon="@drawable/icon_date_add"
        android:title="@string/unmatcheduser"
        android:fontFamily="@font/agaramondpro_regular"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuUserDeleteChat"
        android:title="@string/deletechate"
        android:fontFamily="@font/agaramondpro_regular"
        app:showAsAction="never" />


    <item
        android:id="@+id/menuUserBlockUser"
        android:title="@string/blockuser"
        android:fontFamily="@font/agaramondpro_regular"
        app:showAsAction="never" />


    <item
        android:id="@+id/menuUserReportUser"
        android:title="@string/reportuser"
        android:fontFamily="@font/agaramondpro_regular"
        app:showAsAction="never" />


</menu>