<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Activity.ReportActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarReport"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:theme="@style/ToolbarTheme"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:titleTextColor="@color/colorBlack">

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/textViewProfileReportContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:paddingBottom="20dp"
                android:text="@string/msg_report"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportFake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/msg_fakeprofile" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/msg_photo" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportSpam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/msg_spam" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportAdverts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/msg_adv" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportAdult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/msg_sdultcontent" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportOffence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/msg_personal" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportAbusive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="Abusive Language" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportReligious"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/msg_religious" />

            <CheckBox
                android:id="@+id/checkBoxProfileReportUnderage"
                android:layout_width="match_parent"
                android:fontFamily="@font/agaramondpro_regular"
                android:layout_height="wrap_content"
                android:text="@string/msg_underage" />

            <EditText
                android:id="@+id/editTextProfileReportOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/agaramondpro_regular"
                android:layout_marginBottom="20dp"
                android:background="@color/colorGrey"
                android:gravity="top"
                android:hint="@string/msg_otherreson"
                android:minLines="5"
                android:padding="15dp" />

            <Button
                android:id="@+id/buttonProfileReportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/repor" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>