<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Activity.PasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPasswordToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@android:color/white"
        android:theme="@style/ToolbarTheme"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:fontFamily="@font/agaramondpro_regular"
        android:text="@string/usestrongpwd" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/editTextPasswordOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/currentpwd"
            android:maxLines="1"
            android:fontFamily="@font/agaramondpro_regular"
            android:padding="10dp" />


        <EditText
            android:id="@+id/editTextPasswordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/newpwd"
            android:maxEms="20"
            android:maxLines="1"
            android:fontFamily="@font/agaramondpro_regular"
            android:minEms="8"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirmpwd"
            android:maxEms="20"
            android:maxLines="1"
            android:fontFamily="@font/agaramondpro_regular"
            android:minEms="8"
            android:padding="10dp" />


    </LinearLayout>


    <Button
        android:id="@+id/buttonPasswordUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPink"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:fontFamily="@font/agaramondpro_regular"
        android:text="@string/updatepwd"
        android:textColor="@color/colorWhite" />
</LinearLayout>