<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.Activity.LoginActivity">

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/agaramondpro_regular"
        android:text="@string/lets_make_some_new_friends"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/agaramondpro_regular"
        android:text="@string/login_now_and_keep_the_fun_going"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginTitle"
        tools:layout_editor_absoluteX="3dp" />

    <EditText
        android:id="@+id/loginEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_capsule"
        android:fontFamily="@font/agaramondpro_regular"
        android:gravity="start"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_15ssp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="9dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/loginPassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edittext_capsule"
            android:fontFamily="@font/agaramondpro_regular"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_15ssp"
            android:textColor="@color/colorBlack" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLoginPageLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_capsule"
        android:backgroundTint="@color/colorPink"
        android:fontFamily="@font/agaramondpro_regular"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:layout_editor_absoluteX="-12dp" />

    <TextView
        android:id="@+id/tv_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/links"
        android:text="Forgot Password"
        app:layout_constraintEnd_toEndOf="@+id/textViewLoginTitle"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginPageLogin" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/loginEmailText"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotPass">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/agaramondpro_regular"
            android:text="Not a member"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/btnLoginPageRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/agaramondpro_regular"
            android:text="@string/register"
            android:textColor="@color/links"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>
<!--TODO replace fake add unit id with my id-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:foregroundGravity="bottom"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-2961175322148657/1196032290"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>